# reusable-services

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-Wasm  LICENSE  README.md  bacon.toml  docker-compose.acl.yml  docker-compose.build-acl.yml  docker-compose.build-shared.yml  docker-compose.shared.yml  docker-compose.yml  scripts.sh
.github/workflows/: main.yml
lib/: Cargo.toml  build.rs
lib/proto/acl/: acl.proto
lib/proto/email/: email.proto
lib/proto/files/: files.proto
lib/proto/payments/: payments.proto
lib/src/: lib.rs
lib/src/integration/: auth.rs  email.rs  foreign_key.rs  mod.rs
lib/src/integration/grpc/: clients.rs
lib/src/middleware/auth/: false_graphql.rs  graphql.rs  grpc.rs  mod.rs  rest.rs
lib/src/utils/: api_responses.rs  auth.rs  custom_error.rs  custom_traits.rs  gql_client.rs  graphql_api.rs  grpc.rs  mod.rs  models.rs  mqtt.rs  serialization.rs
logs/: email.log.2025-03-23
nginx/: nginx.conf
services/acl-service/: Cargo.toml  build.rs
services/acl-service/src/: main.rs
services/acl-service/src/auth/: oauth.rs
services/acl-service/src/database/: connection.rs
services/acl-service/src/database/schemas/: schemas.surql
services/acl-service/src/graphql/resolvers/: mutation.rs  query.rs
services/acl-service/src/graphql/schemas/: mod.rs  role.rs  shared.rs  user.rs
services/acl-service/src/grpc/: server.rs
services/acl-service/src/grpc/proto/: acl.proto
services/acl-service/src/middleware/: oauth.rs
services/acl-service/src/rest/: handlers.rs
services/acl-service/src/utils/: auth.rs  oauth.rs  user.rs
services/email/: Cargo.toml  build.rs
services/email/src/: main.rs
services/email/src/database/: connection.rs
services/email/src/database/schemas/: schemas.surql
services/email/src/graphql/resolvers/email/: mutation.rs
services/email/src/graphql/schemas/: email.rs
services/email/src/grpc/: server.rs
services/email/src/grpc/proto/: email.proto
services/email/src/mqtt/: events.rs  mod.rs  subscriptions.rs
services/email/src/utils/: email.rs
services/files/: Cargo.toml  build.rs
services/files/src/: main.rs
services/files/src/database/: connection.rs
services/files/src/database/schemas/: schemas.surql
services/files/src/graphql/resolvers/files/: mutation.rs  query.rs
services/files/src/graphql/schemas/: general.rs
services/files/src/grpc/: server.rs
services/files/src/rest/: handlers.rs
services/files/src/utils/: files.rs
services/payments/: Cargo.toml
services/payments/src/: main.rs
services/payments/src/database/: connection.rs
services/payments/src/database/schemas/: currencies.surql  schemas.surql
services/payments/src/graphql/resolvers/: query.rs
services/payments/src/graphql/resolvers/payments/: mutation.rs  query.rs
services/payments/src/graphql/schemas/: general.rs  mod.rs  pandascrow.rs  shared.rs
services/payments/src/grpc/: server.rs
services/payments/src/rest/: handlers.rs
services/payments/src/utils/: payments.rs
services/shared-service/: Cargo.toml
services/shared-service/src/: main.rs
services/shared-service/src/database/: connection.rs
services/shared-service/src/database/schemas/: schemas.surql
services/shared-service/src/graphql/resolvers/: mutation.rs  query.rs
services/shared-service/src/graphql/schemas/: blog.rs  mod.rs  shared.rs  user.rs
services/shared-service/src/middleware/: auth.rs  mod.rs  user_id.rs
services/shared-service/src/posts/: angular-unit-tests.md
