[workspace]
resolver = "2"
members = [
    # Libs
    "lib",
    # Services
    "services/acl-service",
    "services/files",
    "services/email",
]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
