[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18.1"
async-graphql = "7.0.17"
serde = "1.0.228"
axum = "0.8.6"
surrealdb = "2.3.10"
hyper = "1.7.0"
tonic = "0.12.3"
prost = "0.13.5"
tracing = "0.1.41"
async-trait = "0.1.89"
tonic-middleware = "0.2.3"
rumqttc = "0.24.0"

[build-dependencies]
tonic-build = "0.12.3"
