[package]
name = "lib"
version = "0.2.0"
edition = "2021"

[dependencies]
cookie = { workspace = true }
async-graphql = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
surrealdb = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tonic-middleware = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
