[package]
name = "acl-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
tokio = { version = "1.43.0", features = ["full"] }
hyper = "1.6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
surrealdb = "2.2.1"
chrono = "0.4.40"
serde = "1.0.218"
bcrypt = "0.17.0"
oauth2 = "5.0.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
async-trait = "0.1.87"
lib = { path = "../../lib" }
reqwest = { version = "0.12.12", features = ["json"] }
jwt-simple = "0.12.12"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
tonic-build = "*"

[lints.rust]
unsafe_code = "forbid"
