[package]
name = "acl-service"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
tokio = { version = "1.47.1", features = ["full"] }
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }
surrealdb = "2.3.10"
chrono = "0.4.42"
serde = "1.0.228"
bcrypt = "0.17.1"
oauth2 = "5.0.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
async-trait = "0.1.89"
lib = { path = "../../lib" }
reqwest = { version = "0.12.23", features = ["json"] }
jwt-simple = "0.11.9"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tonic = "0.12.3"
prost = "0.13.5"
tonic-middleware = "0.2.3"
axum-cookie = "0.2.3"
rumqttc = "0.24.0"
serde_json = "1.0.145"
rsa = "0.9.8"
rand = "0.8"
base64 = "0.22.1"
uuid = "1.20.0"
tower_governor = "=0.8.0"

[lints.rust]
unsafe_code = "forbid"
