[package]
name = "acl-service"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
bcrypt = { workspace = true }
oauth2 = { workspace = true }
cookie = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
lib = { workspace = true }
reqwest = { workspace = true }
jwt-simple = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-middleware = { workspace = true }
axum-cookie = { workspace = true }
rumqttc = { workspace = true }
serde_json = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
tower_governor = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
