[package]
name = "email"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
tokio = { version = "1.47.1", features = ["full"] }
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }
surrealdb = "2.3.10"
chrono = "0.4.42"
serde = "1.0.228"
dotenvy = "0.15.7"
lettre = { version = "0.11.19", features = ["builder", "serde", "rustls-tls"] }
lib = { path = "../../lib" }
reqwest = { version = "0.12.23", features = ["blocking"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tonic = "0.12.3"
prost = "0.13.5"
tonic-middleware = "0.2.3"
rumqttc = "0.24.0"
serde_json = "1.0.145"
tower_governor = "=0.8.0"

[lints.rust]
unsafe_code = "forbid"
