[package]
name = "email"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
lettre = { workspace = true }
lib = { workspace = true }
reqwest = { version = "0.12.23", features = ["blocking"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-middleware = { workspace = true }
rumqttc = { workspace = true }
serde_json = { workspace = true }
tower_governor = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
