[package]
name = "files"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
tokio = { version = "1.47.1", features = ["full"] }
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }
surrealdb = "2.3.10"
chrono = "0.4.42"
serde = "1.0.228"
dotenvy = "0.15.7"
lib = { path = "../../lib" }
uuid = { version = "1.18.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
reqwest = "0.12.23"
markdown = "1.0.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tonic = "0.12.3"
prost = "0.13.5"
tonic-middleware = "0.2.3"
tower_governor = "0.8.0"

[lints.rust]
unsafe_code = "forbid"
