[package]
name = "files"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
lib = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
markdown = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-middleware = { workspace = true }
tower_governor = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
