[package]
name = "payments"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
lib = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
tonic-middleware = { workspace = true }
rumqttc = { workspace = true }
tower_governor = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
